Finita bozza workflow e piccoli fix grafici

--- a/src/app/my-sprint/components/gestionale-uo/table-obiettivo-organizzativo/table-obiettivo-organizzativo.component.scss
+++ b/src/app/my-sprint/components/gestionale-uo/table-obiettivo-organizzativo/table-obiettivo-organizzativo.component.scss
@@ -1,8 +1,12 @@
 mat-progress-spinner {
-  margin: 0 auto  ;
+  margin: 0 auto;
 }
 .mys-sal {
   height: 15px;
   text-align: center;
   line-height: 15px;
+}
+
+table th,tr {
+  text-align: center;
 }
