--- a/src/app/my-sprint/components/gestionale-uo/table-obiettivo-organizzativo/table-obiettivo-organizzativo.component.html
+++ b/src/app/my-sprint/components/gestionale-uo/table-obiettivo-organizzativo/table-obiettivo-organizzativo.component.html
@@ -6,12 +6,12 @@
       <section class="mys-d-flex mys-justify-content-between mys-align-items-center">
         <div class="mys-d-flex mys-flex-column mys-mr-3">
           <mat-icon color="primary">home</mat-icon>
-          <mat-icon color="warn">expand_less</mat-icon>
+          <mat-icon color="warn" matTooltip="Priorità alta">expand_less</mat-icon>
         </div>
-        <div class="mys-d-flex mys-flex-column mys-align-items-center mys-mr-3">
+        <div class="mys-d-flex mys-flex-column mys-align-items-center mys-mr-3 mys-py-3">
           <span class="mys-text-color-primary">{{element.obiettivo.codScheda}}</span>
-          <mat-icon *ngIf="element.obiettivo.stato.isApproved" color="primary">verified</mat-icon>
-          <mat-icon *ngIf="element.obiettivo.stato.shouldBeMonitored" [ngStyle]="{'color':'#ffd966'}">warning</mat-icon>
+          <mat-icon *ngIf="element.obiettivo.stato.isApproved" color="primary" matTooltip="Attività verificata">verified</mat-icon>
+          <mat-icon *ngIf="element.obiettivo.stato.shouldBeMonitored" [ngStyle]="{'color':'#ffd966'}" matTooltip="Attività verificata">warning</mat-icon>
         </div>
         <div>
           <p>{{element.obiettivo.name}}</p>
@@ -38,14 +38,15 @@
 
   <ng-container matColumnDef="obRaggiunto">
     <th mat-header-cell *matHeaderCellDef>Obiettivo Raggiunto</th>
-    <td mat-cell *matCellDef="let element">
-      <p *ngIf="!element.obRaggiunto;else spinner">
+    <td mat-cell *matCellDef="let element" class="mys-position-relative">
+      <p *ngIf="!element.obRaggiunto;else spinner" class="mys-text-center">
         N/A
       </p>
       <ng-template #spinner>
-        <p class="mys-text-center mys-font-size-10 mys-text-color-primary">{{element.obRaggiunto}}%</p>
-        <mat-progress-spinner diameter="50" class="example-margin" color="primary" mode="determinate"
-          [value]="element.obRaggiunto">
+        <p class="mys-text-center mys-font-size-10 mys-text-color-primary mys-position-absolute" style="left: 50%;
+    top: 50%;
+    transform: translate(-50%, -50%);">{{element.obRaggiunto}}%</p>
+        <mat-progress-spinner diameter="50" color="primary" mode="determinate" [value]="element.obRaggiunto">
         </mat-progress-spinner>
       </ng-template>
     </td>
@@ -54,7 +55,7 @@
   <ng-container matColumnDef="SALAttivita">
     <th mat-header-cell *matHeaderCellDef>SAL Attività</th>
     <td mat-cell *matCellDef="let element">
-      <p *ngIf="!element.SALAttivita;else SAL">N/A</p>
+      <p *ngIf="!element.SALAttivita;else SAL" class="mys-text-center">N/A</p>
       <ng-template #SAL>
         <div [style.background]="setPercentageBackground(element.SALAttivita)" class="mys-sal mys-w-95 mys-mx-auto">
           <span class="mys-font-size-10 mys-text-color-primary">{{element.SALAttivita}}%</span>
@@ -66,7 +67,7 @@
   <ng-container matColumnDef="azioni">
     <th mat-header-cell *matHeaderCellDef></th>
     <td mat-cell *matCellDef="let element">
-      <mat-icon color="primary">more_horiz</mat-icon>
+      <mat-icon color="primary" class="mys-cursor-pointer">more_horiz</mat-icon>
     </td>
   </ng-container>
 
