--- a/src/app/my-sprint/pages/workflow/workflow.component.scss
+++ b/src/app/my-sprint/pages/workflow/workflow.component.scss
@@ -1,23 +1,25 @@
 @use '../../../../styles/palette';
 
 .mys-chip-selected {
-  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.377) ;
+  box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.377);
   cursor: pointer;
 }
 
 .mys-chip {
-  opacity: .5;
-  background-color: map-get(palette.$accent-palette, 100 );
+  opacity: 0.5;
+  background-color: map-get(palette.$accent-palette, 100);
   color: palette.$dark-primary-text;
   cursor: pointer;
 }
 section {
-  .mat-card{
-    padding:2rem;
+  .mat-card {
+    padding: 2rem;
     width: fit-content;
     &:hover {
-      box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.377) ;
+      box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.377);
     }
-
-}  
+  }
+}
+mat-list-item:hover {
+  background-color: map-get(palette.$primary-palette, 100);
 }
